kubernetes/adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
        - name: service
          image: iamfet/adservice:v15797358403
          ports:
            - containerPort: 9555
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 180Mi
          livenessProbe:
            grpc:
              port: 9555
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            grpc:
              port: 9555
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  ports:
    - port: 9555
      targetPort: 9555
  selector:
    app: adservice
  type: ClusterIP
