kubernetes/cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
        - name: service
          image: iamfet/cartservice:v15797358403
          ports:
            - containerPort: 7070
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 180Mi
          livenessProbe:
            grpc:
              port: 7070
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            grpc:
              port: 7070
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  ports:
    - port: 7070
      targetPort: 7070
  selector:
    app: cartservice
  type: ClusterIP
