kubernetes/checkoutservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
        - name: service
          image: iamfet/checkoutservice:v15797358403
          ports:
            - containerPort: 5050
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            grpc:
              port: 5050
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            grpc:
              port: 5050
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  ports:
    - port: 5050
      targetPort: 5050
  selector:
    app: checkoutservice
  type: ClusterIP
