kubernetes/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
        - name: service
          image: iamfet/recommendationservice:v15797358403
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 450Mi
            requests:
              cpu: 100m
              memory: 220Mi
          livenessProbe:
            grpc:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            grpc:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: recommendationservice
  type: ClusterIP
