kubernetes/redis-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 200m
              memory: 180Mi
          volumeMounts:
            - mountPath: /data
              name: redis-data
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: 6379
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: 6379
      volumes:
        - emptyDir: {}
          name: redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-cart
  type: ClusterIP
